cloudformation/demo-ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description:
  Template for creating simple deployment with EC2 instance.
Parameters:
  VPCID:
    Type: String
    Description: What VPC ID this template is deployed in
  EC2AMIID: 
    Type:  AWS::EC2::Image::Id
    Description: AMI ID of EC2 instance Server
    # Default is Amazon Linux 2 AMI (HVM) - Kernel 5.10, SSD Volume Type (64-bit x86)
    Default: ami-0abb8f6b71e7614d5
  KeyPair: 
    Type: String
    Description: What keypair being used to access EC2 instance via ssh
    Default: demo-keypair

Resources:
  ServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroupIds: 
        - !Ref 'ServerInstanceSG'
      KeyName: !Ref 'KeyPair'
      ImageId: !Ref 'EC2AMIID'
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd
            echo "<h1>Hello world from $(hostname -f)</h1>" > /var/www/html/index.html

  ServerInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and Web Access
      VpcId: !Ref 'VPCID'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
  
Outputs:
  # output of web link
  WebHTTP:
    Description: HTTP of Web from EC2
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt
          - ServerInstance
          - PublicDnsName
